<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="application_name" translatable="false">Infinity</string>
    <string name="login_activity_label">Login</string>
    <string name="search_activity_label" translatable="false"> </string>
    <string name="comment_activity_label">Send Comment</string>
    <string name="comment_activity_label_is_replying">Reply</string>
    <string name="post_text_activity_label">Text Post</string>
    <string name="subreddit_selection_activity_label">Select a Subreddit</string>
    <string name="post_link_activity_label">Link Post</string>
    <string name="post_image_activity_label">Image Post</string>
    <string name="post_video_activity_label">Video Post</string>
    <string name="rules_activity_label">Rules</string>
    <string name="search_subreddits_activity_label">Subreddits</string>
    <string name="edit_post_activity_label">Edit Post</string>
    <string name="edit_comment_activity_label">Edit Comment</string>
    <string name="view_message_activity_label">Inbox</string>
    <string name="settings_activity_label">Settings</string>
    <string name="account_saved_thing_activity_label">Saved</string>
    <string name="create_multi_reddit_activity_label">Create Multireddit</string>
    <string name="subreddit_multiselection_activity_label">Select Subreddits</string>
    <string name="custom_theme_listing_activity_label">Custom Themes</string>
    <string name="customize_theme_activity_label">Customize Theme</string>
    <string name="customize_theme_activity_create_theme_label">Create Theme</string>
    <string name="theme_preview_activity_label">Theme Preview</string>
    <string name="edit_multi_reddit_activity_label">Edit Multireddit</string>
    <string name="selected_subeddits_activity_label">Selected Subreddits</string>
    <string name="report_activity_label">Report</string>
    <string name="view_imgur_media_activity_image_label">Image %1$d/%2$d</string>
    <string name="view_imgur_media_activity_video_label">Video %1$d/%2$d</string>
    <string name="send_private_message_activity_label">Send PM</string>
    <string name="view_reddit_gallery_activity_image_label">Image %1$d/%2$d</string>
    <string name="view_reddit_gallery_activity_gif_label">Gif %1$d/%2$d</string>
    <string name="view_reddit_gallery_activity_video_label">Video %1$d/%2$d</string>
    <string name="submit_crosspost_activity_label">Crosspost</string>
    <string name="give_award_activity_label">Give Award</string>
    <string name="subreddit_filter_popular_and_all_activity_label">r/all and r/popular</string>
    <string name="customize_post_filter_activity_label">Customize Post Filter</string>
    <string name="filtered_posts_activity_subtitle">Filtered Posts</string>
    <string name="post_filter_preference_activity_label">Post Filter</string>
    <string name="search_users_result_activity_label">Users</string>
    <string name="multireddit_selection_activity_label">Select a Multireddit</string>
    <string name="post_gallery_activity_label">Gallery Post</string>
    <string name="trending_activity_label">Trending</string>
    <string name="wiki_activity_label">Wiki</string>
    <string name="edit_profile_activity_label">Edit Profile</string>
    <string name="post_poll_activity_label">Poll Post</string>
    <string name="history_activity_label">History</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_download">Download</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_add_comment">Add a comment</string>
    <string name="action_save_post">Save post</string>
    <string name="action_view_crosspost_parent">View crosspost parent</string>
    <string name="action_search">Search</string>
    <string name="action_start_lazy_mode">Start Lazy Mode</string>
    <string name="action_stop_lazy_mode">Stop Lazy Mode</string>
    <string name="action_send">Send</string>
    <string name="action_sort">Sort</string>
    <string name="action_hide_post">Hide Post</string>
    <string name="action_unhide_post">Unhide Post</string>
    <string name="action_edit_post">Edit Post</string>
    <string name="action_delete_post">Delete Post</string>
    <string name="action_mark_nsfw">Mark NSFW</string>
    <string name="action_unmark_nsfw">Unmark NSFW</string>
    <string name="action_mark_spoiler">Mark Spoiler</string>
    <string name="action_unmark_spoiler">Unmark Spoiler</string>
    <string name="action_edit_flair">Edit Flair</string>
    <string name="action_change_post_layout">Change Post Layout</string>
    <string name="action_save">Save</string>
    <string name="action_edit_multi_reddit">Edit MultiReddit</string>
    <string name="action_delete_multi_reddit">Delete Multireddit</string>
    <string name="action_share">Share</string>
    <string name="action_preview">Preview</string>
    <string name="action_report">Report</string>
    <string name="action_see_removed">See Removed</string>
    <string name="action_crosspost">Crosspost</string>
    <string name="action_set_wallpaper">Set as Wallpaper</string>
    <string name="action_send_private_message">Send Private Message</string>
    <string name="action_block_user">Block User</string>
    <string name="action_select_user_flair">Select User Flair</string>
    <string name="action_give_award">Give Award</string>
    <string name="action_save_to_database">Save to Database</string>
    <string name="action_read_all_messages">Read All Messages</string>
    <string name="action_add_to_multireddit">Add to Multireddit</string>
    <string name="action_share_link">Share Link</string>
    <string name="action_copy_link">Copy Link</string>
    <string name="action_open_external_browser">Open in browser</string>
    <string name="action_add_to_post_filter">Add to Post Filter</string>
    <string name="action_delete_logs">Delete Logs</string>
    <string name="action_create_github_issue">Create GitHub Issue</string>
    <string name="action_share_post_link">Share Post Link</string>
    <string name="action_go_to_wiki">Go to Wiki</string>
    <string name="action_playback_speed">Playback Speed</string>
    <string name="action_contact_mods">Contact Mods</string>
    <string name="action_more_options">More Options</string>
    <string name="parse_json_response_error">Error occurred when parsing the JSON response</string>
    <string name="retrieve_token_error">Error Retrieving the token</string>
    <string name="something_went_wrong">Something went wrong. Try again later.</string>
    <string name="access_denied">Access denied</string>
    <string name="parse_user_info_error">Error occurred when parsing the user info</string>
    <string name="no_system_webview_error">Error opening System\'s WebView</string>
    <string name="error_loading_image_tap_to_retry">Error loading the image. Tap to retry.</string>
    <string name="load_posts_error">Error loading posts.\nTap to retry.</string>
    <string name="load_more_posts_error">Error loading posts.</string>
    <string name="load_post_error">Error loading this post.\nTap to retry.</string>
    <string name="search_subreddits_error">Error searching subreddits.\nTap to retry.</string>
    <string name="search_users_error">Error searching users.\nTap to retry.</string>
    <string name="no_posts">No posts found</string>
    <string name="no_comments">No comments found</string>
    <string name="no_subreddits">No subreddits found</string>
    <string name="no_users">No users found</string>
    <string name="no_multi_reddits">No Multireddits found</string>
    <string name="no_storage_permission">No storage permission to save this file</string>
    <string name="load_comments_failed">Error loading comments.\nTap to retry.</string>
    <string name="retry">Retry</string>
    <string name="no_comments_yet">No comments yet. Write a comment?</string>
    <string name="vote_failed">Vote failed</string>
    <string name="refresh_post_failed">Error refreshing the post</string>
    <string name="load_messages_failed">Error loading messages.\nTap to retry.</string>
    <string name="no_messages">Empty</string>
    <string name="nsfw">NSFW</string>
    <string name="karma_info">Karma: %1$,d</string>
    <string name="karma_info_user_detail">Karma:\n%1$,d (%2$d + %3$d)</string>
    <string name="cakeday_info">Cake day:\n%1$s</string>
    <string name="since">Since:</string>
    <string name="profile">Profile</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="multi_reddit">Multireddit</string>
    <string name="history">History</string>
    <string name="inbox">Inbox</string>
    <string name="inbox_with_count">Inbox (%1$,d)</string>
    <string name="trending">Trending</string>
    <string name="upvoted">Upvoted</string>
    <string name="downvoted">Downvoted</string>
    <string name="hidden">Hidden</string>
    <string name="saved">Saved</string>
    <string name="gilded">Gilded</string>
    <string name="settings">Settings</string>
    <string name="subscribers_number_detail">Subscribers: %1$,d</string>
    <string name="online_subscribers_number_detail">Online: %1$,d</string>
    <string name="cannot_fetch_subreddit_info">Cannot fetch subreddit info</string>
    <string name="cannot_fetch_user_info">Cannot fetch user info</string>
    <string name="cannot_fetch_sidebar">Cannot fetch sidebar</string>
    <string name="cannot_fetch_multireddit">Cannot fetch multireddit info</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="subscribed">Subscribed</string>
    <string name="subscribe_failed">Subscribe Failed</string>
    <string name="unsubscribed">Unsubscribed</string>
    <string name="unsubscribe_failed">Unsubscribe Failed</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="followed">Followed</string>
    <string name="follow_failed">Following Failed</string>
    <string name="unfollowed">Unfollowed</string>
    <string name="unfollow_failed">Unfollowing Failed</string>
    <string name="content_description_banner_imageview">Subreddit Banner Image</string>
    <string name="app_label">Infinity</string>
    <string name="search_hint">Search anything</string>
    <string name="search_only_subreddits_hint">Search subreddits</string>
    <string name="search_only_users_hint">Search users</string>
    <string name="settings_immersive_interface_title">Immersive Interface</string>
    <string name="settings_customize_tabs_in_main_page_title">Customize Tabs in Main Page</string>
    <string name="settings_enable_bottom_app_bar_title">Enable Bottom Navigation</string>
    <string name="settings_category_post_and_comment_title">Post and Comment</string>
    <string name="settings_vote_buttons_on_the_right_title">Vote Buttons on the Right</string>
    <string name="settings_category_comment_title">Comment</string>
    <string name="settings_show_absolute_number_of_votes_title">Show Absolute Number of Votes</string>
    <string name="settings_time_format_title">Time Format</string>
    <string name="settings_category_post_title">Post</string>
    <string name="settings_font_title">Font</string>
    <string name="settings_customize_bottom_app_bar_title">Customize Bottom Navigation Bar</string>
    <string name="settings_hide_subreddit_description_title">Hide Subreddit Description</string>
    <string name="settings_navigation_drawer_title">Navigation Drawer</string>
    <string name="settings_default_search_result_tab">Default Search Result Tab</string>
    <string name="settings_post_details_title">Post Details</string>
    <string name="settings_use_bottom_toolbar_in_media_viewer_title">Use Bottom Toolbar in Media Viewer</string>
    <string name="settings_hide_fab_in_post_feed">Hide FAB in Post Feed</string>
</resources>